--- a/PlataformaDisco/style.css
+++ b/PlataformaDisco/style.css
@@ -64,6 +64,7 @@ font-style: normal;
     padding: 50px;
     border-radius: 20px;
     position: relative;
+    margin-top: 50px;
   }
   
   .title {
@@ -173,6 +174,7 @@ font-style: normal;
   
   .user {
     padding: 20px;
+    margin-top: 20px;
   }
   
   .user .username {
@@ -182,12 +184,14 @@ font-style: normal;
   .menu {
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-right: 2px;
   }
   
   .menu .section {
     margin-bottom: 20px;
     border: solid 2px;
     border-color: rgb(255, 255, 255);
+    margin-top: 20px;
   }
   
   .menu a {
