--- a/PlataformaDisco/style.css
+++ b/PlataformaDisco/style.css
@@ -19,33 +19,36 @@
   margin-left: 15%;
   margin-top: 40px;
 }
-.Tour{
+.Tour {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
-  flex-direction: column ;
-  background: linear-gradient(to bottom,#535b66, #869091, #d6a992 ,#a67f7a,#574553);
+  margin-top: 10px;
+  flex-direction: column;
+  background: linear-gradient(to bottom, #535b66, #869091, #d6a992, #a67f7a, #574553);
   margin-left: 700px;
   margin-right: 700px;
   border-radius: 15px;
   border: transparent;
-  
 }
-.date{
-display: flex;
-border: solid black 1px;
-width: 95%;
-justify-content: space-around;
-align-items: center;
-flex-direction: row;
-border-radius: 15px;
-margin-bottom: 15px;
-padding: 10px;
+.date {
+  display: flex;
+  border: solid black 1px;
+  width: 95%;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  padding: 10px;
 }
 
 .date:hover{
   filter: drop-shadow(2px 2px 2px rgb(70, 67, 67));
+}
+
+.date img {
+  margin: 0 auto; 
 }
 
 .pDate{
@@ -62,11 +65,11 @@ padding: 10px;
   align-items: center;
 }
 
-.buy{
+.buy {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 30px; 
+  margin: 30px;
   flex-direction: row-reverse;
   background-color: rgb(0, 76, 148);
   padding: 10px;
@@ -94,16 +97,14 @@ padding: 10px;
 }
 
 body{
-    font-family: "Raleway", sans-serif;
-font-optical-sizing: auto;
+    font-family: "Raleway";
 font-weight: 600;
 font-style: normal;
 }
 
 .sing_up{
 background-image: url(FondoLogSing/996730.png);
-font-family: "Raleway", sans-serif;
-font-optical-sizing: auto;
+font-family: "Raleway";
 font-weight: 600;
 font-style: normal;
 }
@@ -258,8 +259,8 @@ font-style: normal;
   
   .menu .section {
     margin-bottom: 20px;
-    border: solid 2px;
-    border-color: rgb(255, 255, 255);
+    /* border: solid 2px;
+    border-color: rgb(255, 255, 255); */
     margin-top: 20px;
   }
   
@@ -325,4 +326,18 @@ ol{
 }
 audio:hover {
   filter: drop-shadow(2px 3px 3px #333);
+}
+
+.iSpan{
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+  margin: 15px;
+  font-size: 20px;
+  margin: 15px;
+  font-weight: bold;
+  align-items: center;
+}
+.iSpan i{
+  margin: 5px;
 }
