--- a/PlataformaDisco/style.css
+++ b/PlataformaDisco/style.css
@@ -20,16 +20,15 @@
   margin-top: 40px;
 }
 .Tour {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 10px;
+  width: 500px;
+  height: 800px;
+  margin: 50px auto;
+  border: 2px solid black;
+  padding: 20px;
+  /* box-shadow: 15px 10px 0px rgb(54, 52, 52); */
   flex-direction: column;
   background: linear-gradient(to bottom, #535b66, #869091, #d6a992, #a67f7a, #574553);
-  margin-left: 700px;
-  margin-right: 700px;
   border-radius: 15px;
-  border: transparent;
 }
 .date {
   display: flex;
