--- a/PlataformaDisco/style.css
+++ b/PlataformaDisco/style.css
@@ -64,6 +64,22 @@
   align-items: center;
 }
 
+.button {
+  display: flex;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  justify-content: space-evenly;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
 .buy {
   display: flex;
   justify-content: space-between;
