--- a/PlataformaDisco/style.css
+++ b/PlataformaDisco/style.css
@@ -1,18 +1,16 @@
-
-.bgIndex{
+.bgIndex {
   background-image: url(Background/starry-background-blue-night-sky-design-illustration-vector.jpg);
   height: 100%;
   width: 100%;
 }
 
-.bgTour{
+.bgTour {
   background-image: url(Background/show.jpeg);
   height: 100%;
   width: 100%;
-  
 }
 
-.TitleMain{
+.TitleMain {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,7 +25,14 @@
   padding: 20px;
   /* box-shadow: 15px 10px 0px rgb(54, 52, 52); */
   flex-direction: column;
-  background: linear-gradient(to bottom, #535b66, #869091, #d6a992, #a67f7a, #574553);
+  background: linear-gradient(
+    to bottom,
+    #535b66,
+    #869091,
+    #d6a992,
+    #a67f7a,
+    #574553
+  );
   border-radius: 15px;
 }
 .date {
@@ -42,22 +47,21 @@
   padding: 10px;
 }
 
-.date:hover{
+.date:hover {
   filter: drop-shadow(2px 2px 2px rgb(70, 67, 67));
 }
 
 .date img {
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
-.pDate{
+.pDate {
   display: flex;
   justify-content: flex-end;
   margin-right: 20px;
-
 }
 
-.fecha{
+.fecha {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
@@ -91,236 +95,244 @@
   border-radius: 20px;
   color: white;
 }
-.buy:hover{
+.buy:hover {
   background-color: rgb(37, 1, 105);
   color: white;
 }
 
+.titleTour {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.titleTour{
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    margin-top: 40px;
-  
+  margin-top: 40px;
 }
 
-.imgTitle{
+.imgTitle {
   width: 500px;
 }
 
-body{
-    font-family: "Raleway";
-font-weight: 600;
-font-style: normal;
+body {
+  font-family: "Raleway";
+  font-weight: 600;
+  font-style: normal;
 }
 
-.sing_up{
-background-image: url(FondoLogSing/996730.png);
-font-family: "Raleway";
-font-weight: 600;
-font-style: normal;
+.sing_up {
+  background-image: url(FondoLogSing/996730.png);
+  font-family: "Raleway";
+  font-weight: 600;
+  font-style: normal;
 }
 
-.TitleRegis{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px;
+.TitleRegis {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
 }
-.singUp{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+.singUp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    max-width: 350px;
-    background: linear-gradient(to bottom,#535b66, #869091, #d6a992 ,#a67f7a,#574553);
-    padding: 50px;
-    border-radius: 20px;
-    position: relative;
-    margin-top: 50px;
-  }
-  
-  .title {
-    font-size: 40px;
-    color: rgb(14, 10, 250);
-    font-weight: 600;
-    letter-spacing: -1px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding-left: 30px;
-    flex-direction: column;
-  }
-  
-  
-  .message {
-    color: rgba(88, 87, 87, 0.822);
-    font-size: 25px;
-  }
-  
-  
-  .flex {
-    display: flex;
-    width: 100%;
-    gap: 6px;
-  }
-  
-  .form label {
-    position: relative;
-  }
-  
-  .form label .input {
-    width:90%;
-    padding: 10px 10px 20px 10px;
-    outline: 0;
-    border: 1px solid rgba(105, 105, 105, 0.397);
-    border-radius: 10px;
-  }
-  
-  .form label .input + span {
-    position: absolute;
-    left: 10px;
-    top: 15px;
-    color: grey;
-    font-size: 0.9em;
-    cursor: text;
-    transition: 0.3s ease;
-  }
-  
-  .form label .input:placeholder-shown + span {
-    top: 15px;
-    font-size: 0.9em;
-  }
-  
-  .form label .input:focus + span,.form label .input:valid + span {
-    top: 30px;
-    font-size: 0.7em;
-    font-weight: 600;
-  }
-  
-  .form label .input:valid + span {
-    color: green;
-  }
-  
-  .submit {
-    border: none;
-    outline: none;
-    background-color: rgb(80, 194, 141);
-    padding: 10px;
-    border-radius: 10px;
-      
-    font-size: 16px;
-    transform: .3s ease;
-    margin-top: 10px;
-  }
-  
-  .submit:hover {
-    background-color: rgb(26, 207, 50);
-  }
-  
-  .signin {
-    text-align: center;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 350px;
+  background: linear-gradient(
+    to bottom,
+    #535b66,
+    #869091,
+    #d6a992,
+    #a67f7a,
+    #574553
+  );
+  padding: 50px;
+  border-radius: 20px;
+  position: relative;
+  margin-top: 50px;
+}
 
-  .userIco{
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-  }
-  .user{
-    font-size: 20px;
-  }
+.title {
+  font-size: 40px;
+  color: rgb(14, 10, 250);
+  font-weight: 600;
+  letter-spacing: -1px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  flex-direction: column;
+}
 
-  .sidebar {
-    width: 10%;
-    height: 100%;
-    background: linear-gradient(to bottom,#535b66, #869091, #d6a992 ,#a67f7a,#574553);
-    color: white;
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    overflow-y: auto;
-    font-size: 22px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  
-  .user {
-    padding: 20px;
-    margin-top: 20px;
-  }
-  
-  .user .username {
-    font-weight: bold;
-  }
-  
-  .menu {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-right: 2px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .menu .section {
-    margin-bottom: 20px;
-    /* border: solid 2px;
+.message {
+  color: rgba(88, 87, 87, 0.822);
+  font-size: 25px;
+}
+
+.flex {
+  display: flex;
+  width: 100%;
+  gap: 6px;
+}
+
+.form label {
+  position: relative;
+}
+
+.form label .input {
+  width: 90%;
+  padding: 10px 10px 20px 10px;
+  outline: 0;
+  border: 1px solid rgba(105, 105, 105, 0.397);
+  border-radius: 10px;
+}
+
+.form label .input + span {
+  position: absolute;
+  left: 10px;
+  top: 15px;
+  color: grey;
+  font-size: 0.9em;
+  cursor: text;
+  transition: 0.3s ease;
+}
+
+.form label .input:placeholder-shown + span {
+  top: 15px;
+  font-size: 0.9em;
+}
+
+.form label .input:focus + span,
+.form label .input:valid + span {
+  top: 30px;
+  font-size: 0.7em;
+  font-weight: 600;
+}
+
+.form label .input:valid + span {
+  color: green;
+}
+
+.submit {
+  border: none;
+  outline: none;
+  background-color: rgb(80, 194, 141);
+  padding: 10px;
+  border-radius: 10px;
+
+  font-size: 16px;
+  transform: 0.3s ease;
+  margin-top: 10px;
+}
+
+.submit:hover {
+  background-color: rgb(26, 207, 50);
+}
+
+.signin {
+  text-align: center;
+}
+
+.userIco {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+}
+.user {
+  font-size: 20px;
+}
+
+.sidebar {
+  width: 10%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    #535b66,
+    #869091,
+    #d6a992,
+    #a67f7a,
+    #574553
+  );
+  color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  overflow-y: auto;
+  font-size: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.user {
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.user .username {
+  font-weight: bold;
+}
+
+.menu {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-right: 2px;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu .section {
+  margin-bottom: 20px;
+  /* border: solid 2px;
     border-color: rgb(255, 255, 255); */
-    margin-top: 20px;
-  }
-  
-  .menu a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-  }
-  
-  .menu a:hover {
-    color: rgb(232, 253, 41);
-  }
+  margin-top: 20px;
+}
 
-  .Evolve{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 15%;
-    flex-direction: column;
-  }
-.imgEvolve{
+.menu a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+.menu a:hover {
+  color: rgb(232, 253, 41);
+}
+
+.Evolve {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15%;
+  flex-direction: column;
+}
+.imgEvolve {
   width: 300px;
 }
-ol{
+ol {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   align-items: flex-end;
   flex-direction: column;
 }
-.bodyEvolve{
- background-color: rgb(216, 216, 216);
+.bodyEvolve {
+  background-color: rgb(216, 216, 216);
 }
-.pEvolve{
+.pEvolve {
   font-size: 22px;
   color: rgb(0, 0, 0);
 }
-.songList{
+.songList {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   font-size: 20px;
-  
 }
 
-.titlesong{
+.titlesong {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -328,22 +340,22 @@ ol{
 }
 
 @media screen and (max-width: 768px) {
-    .NotiUp div,
-    .NotiDown div {
-        width: calc(50% - 20px);
-    }
+  .NotiUp div,
+  .NotiDown div {
+    width: calc(50% - 20px);
+  }
 }
 @media screen and (max-width: 480px) {
-    .NotiUp div,
-    .NotiDown div {
-        width: calc(100% - 20px);
-    }
+  .NotiUp div,
+  .NotiDown div {
+    width: calc(100% - 20px);
+  }
 }
 audio:hover {
   filter: drop-shadow(2px 3px 3px #333);
 }
 
-.iSpan{
+.iSpan {
   display: flex;
   justify-content: center;
   padding: 5px;
@@ -353,6 +365,6 @@ audio:hover {
   font-weight: bold;
   align-items: center;
 }
-.iSpan i{
+.iSpan i {
   margin: 5px;
 }
